# testrepo

./: Dockerfile  cloudbuild-cd.yaml  cloudbuild-ci.yaml  pyproject.toml  test.rb
terraform/: backend.tf  main.tf  terraform.tf  variable.tf
terraform/environments/: test.tfvars
tests/industry/: test_indus.py
